// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-switch-legacy #render should render component as expected (1) 1`] = `
<gux-switch-legacy class="gux-small" layout="small" role="group" value="day">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <gux-switch-item value="month">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Month
    </button>
  </gux-switch-item>
  <gux-switch-item value="week">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Week
    </button>
  </gux-switch-item>
  <gux-switch-item value="day">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Day
    </button>
  </gux-switch-item>
  <gux-switch-item disabled="" value="hour">
    <!---->
    <button aria-current="false" class="gux-switch-item" disabled="" type="button">
      Hour
    </button>
  </gux-switch-item>
  <gux-switch-item value="minute">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Minute
    </button>
  </gux-switch-item>
</gux-switch-legacy>
`;

exports[`gux-switch-legacy onSlotchange should set selected items as expected 1`] = `
<gux-switch-legacy class="gux-small" layout="small" role="group" value="day">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <gux-switch-item value="month">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Month
    </button>
  </gux-switch-item>
  <gux-switch-item value="week">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Week
    </button>
  </gux-switch-item>
  <gux-switch-item value="day">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Day
    </button>
  </gux-switch-item>
  <gux-switch-item disabled="" value="hour">
    <!---->
    <button aria-current="false" class="gux-switch-item" disabled="" type="button">
      Hour
    </button>
  </gux-switch-item>
  <gux-switch-item value="minute">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Minute
    </button>
  </gux-switch-item>
  <gux-switch-item value="second">
    <!---->
    <button aria-current="false" class="gux-switch-item" type="button">
      Second
    </button>
  </gux-switch-item>
</gux-switch-legacy>
`;
